--- a/cadastro1.html
+++ b/cadastro1.html
@@ -8,7 +8,13 @@
 </head>
 <body>
   <div class="cadastro-container">
-    <h2>Cadastro</h2>
+
+    <div class="profile-pic-wrapper">
+      <input type="file" id="profile-input" accept="image/*" class="hidden" onchange="handleImageUpload(event)">
+      <img src="profilepic.png" alt="Profile Picture" id="profile-pic" onclick="triggerImageUpload()" />
+    </div>
+
+    <h2 class = "heading-regular">Escolher imagem</h2>
 
     <input type="text" id="nome" placeholder="Nome" />
 
@@ -31,5 +37,8 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
+
 
 
