--- a/cadastro2.html
+++ b/cadastro2.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cadastro - Gênero Favorito</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="cadastro-container">
     <h2>Selecione seu gênero favorito</h2>
 
     <div id="genres-dynamic-container" class="pyramid-layout"></div>
-
     <p id="genre-error" class="error"></p>
 
-    <button onclick="continuarCadastroGenero()">Continuar</button>
+    <button onclick="finalizarCadastro()">Finalizar Cadastro</button>
   </div>
 
   <script src="script.js"></script>
