--- a/index.html
+++ b/index.html
@@ -4,25 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Book Finder</title>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css">
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css'>
 </head>
 <body>
   <div class="login-container">
-    <h2>Login</h2>
+    <img src="img/logo2.png" alt="Logo" class="logo">
+    
+    <!--Input de login-->
 
-    <input type="email" id="email" placeholder="Email" />
-    <div class="password-wrapper">
-      <input type="password" id="password" placeholder="Senha" />
-      <span class="toggle-password" onclick="togglePasswordVisibility('password', this)">👁️</span>
+    <div class="input-wrapper">
+       <input type="email" id="email" placeholder="Email" />
+       <i class='bx bxs-user input-icon'></i>
     </div>
 
-    <button onclick="login()">Entrar</button>
+    <!--Input de senha-->
+    <div class="input-wrapper">
+      <input type="password" id="password" placeholder="Senha" />
+      <span class="toggle-password" onclick="togglePasswordVisibility('password', this)">
+        <i class="bi bi-eye-slash-fill input-icon"></i>
+    </div>
+
+
+    <button onclick="login()">Login</button>
     <p id="error-message" class="error"></p>
 
-    <p class="no-account">Não tenho uma conta</p>
-    <button onclick="goToCadastro()">Cadastro</button>
+   <div>
+     <p class="no-account">Não tenho uma conta <a href ="cadastro1.html" class = "click">Cadastrar</a></p>
+   </div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
