--- a/cadastro1.html
+++ b/cadastro1.html
@@ -5,40 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro - Book Finder</title>
   <link rel="stylesheet" href="style.css">
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css'>
 </head>
+
+
 <body>
-  <div class="cadastro-container">
+  <div class="cadastro-wrapper">
+   <div class ="cadastro-container">
+       <div class="profile-pic-wrapper">
+          <input type="file" id="profile-input" accept="image/*" class="hidden" onchange="handleImageUpload(event)"/>
+          <img src="img/logo2.png" alt="Profile Picture" id="profile-pic" onclick="triggerImageUpload()" />
+       </div>
 
-    <div class="profile-pic-wrapper">
-      <input type="file" id="profile-input" accept="image/*" class="hidden" onchange="handleImageUpload(event)">
-      <img src="profilepic.png" alt="Profile Picture" id="profile-pic" onclick="triggerImageUpload()" />
-    </div>
+       <h2 class = "heading-regular">Escolher imagem</h2>
+    
+       <div class="input-box-cadastro">
+          <input type="text" id="nome" placeholder="Nome" />
+      </div>
 
-    <h2 class = "heading-regular">Escolher imagem</h2>
+       <div class="input-box-cadastro">
+          <input type="text" id="username" placeholder="Username" oninput="validateUsername()" />
+           <p id="username-error" class="input-error"></p>
+       </div>
 
-    <input type="text" id="nome" placeholder="Nome" />
+       <div class="input-box-cadastro">
+          <input type="email" id="email" placeholder="Email" />
+       </div>
 
-    <input type="text" id="username" placeholder="Username" oninput="validateUsername()" />
-    <p id="username-error" class="input-error"></p>
 
-    <input type="email" id="email" placeholder="Email" />
+       <div class="input-box-cadastro password-container">
+         <input type="password" id="senha" placeholder="Senha" oninput="validatePassword()" />
+         <span class="toggle-password2" onclick="togglePasswordVisibility('senha', this)">
+           <i class="bi bi-eye-slash-fill input-icon"></i>
+         </span>
+       </div>
 
-    <div class="password-wrapper">
-      <input type="password" id="senha" placeholder="Senha" oninput="validatePassword()" />
-      <span class="toggle-password" onclick="togglePasswordVisibility('senha', this)">👁️</span>
-    </div>
-    <p id="senha-error" class="input-error"></p>
+      <p id="senha-error" class="input-error"></p>
+      <p id="error-message" class="error"></p>
 
-    <p id="error-message" class="error"></p>
+     <button onclick="continuarCadastro()">Continuar</button>
+  
 
-    <button onclick="continuarCadastro()">Continuar</button>
-  </div>
+     <div class="login">
+      <label>Já tem conta?</label>
+      <a href="index.html" class="click">Faça login</a>
+     </div>
+
+   </div>
+ </div>
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
